tests/snapshots/run@tests::programs::chained_ops.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/chained_ops.hvm
---
#7184190578800
RWTS   :              28
- ANNI :               2
- COMM :               4
- ERAS :               0
- DREF :               2
- OPER :              20
