tests/snapshots/run@tests::programs::church_exp.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/church_exp.hvm
---
(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1((#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(a b) c) d) e) f) g) h) i) j) k) l) m) n) o) p) q) r) s) t) u) v) w) x) y) z) aa) ab) ac) ad) ae) af) ag) ah) ai) aj) ak) al) am) an) ao) ap) aq) ar) as) at) au) av) aw) ax) ay) az) ba) bb) bc) bd) be) bf) bg) bh) bi) bj) bk) bl) bm) bn) bo) bp) bq) br) bs) bt) bu) bv) bw) bx) by) bz) ca) cb) cc) cd) ce) cf) cg) ch) ci) cj) ck) cl) cm) cn) co) cp) cq) cr) cs) ct) cu) cv) cw) cx) cy) cz) da) db) dc) dd) de) df) dg) dh) di) dj) dk) dl) dm) dn) do) dp) dq) dr) ds) dt) du) dv) dw) dx) dy) dz) ea) eb) ec) ed) ee) ef) eg) eh) ei) ej) ek) el) em) en) eo) ep) eq) er) es) et) eu) ev) ew) ex) ey) ez) fa) fb) fc) fd) fe) ff) fg) fh) fi) fj) fk) fl) fm) fn) fo) fp) fq) fr) fs) ft) fu) fv) fw) fx) fy) fz) ga) gb) gc) gd) ge) gf) gg) gh) gi) gj) gk) gl) gm) gn) go) gp) gq) gr) gs) gt) gu) gv) gw) gx) gy) gz) ha) hb) hc) hd) he) hf) hg) hh) hi) hj) hk) hl) hm) hn) ho) hp) hq) hr) hs) ht) hu) hv) hw) hx) hy) hz) ia) ib) ic) id) ie) if) ig) ih) ii) ij) ik) il) im) in) io) ip) iq) ir) is) it) iu) iv) iw) ix) iy) iz) ja) jb) jc) jd) je) jf) jg) jh) ji) jj) jk) jl) jm) jn) jo) jp) jq) jr) js) jt) ju) jv) jw) jx) jy) jz) ka) kb) kc) kd) ke) kf) kg) kh) ki) kj) kk) kl) km) kn) ko) kp) kq) kr) ks) kt) ku) kv) kw) kx) ky) kz) la) lb) lc) ld) le) lf) lg) lh) li) lj) lk) ll) lm) ln) lo) lp) lq) lr) ls) lt) lu) lv) lw) lx) ly) lz) ma) mb) mc) md) me) mf) mg) mh) mi) mj) mk) ml) mm) mn) mo) mp) mq) mr) ms) mt) mu) mv) mw) mx) my) (my mz)) (mz na)) (na nb)) (nb nc)) (nc nd)) (nd ne)) (ne nf)) (nf ng)) (ng nh)) (nh ni)) (ni nj)) (nj nk)) (nk nl)) (nl nm)) (nm nn)) (nn no)) (no np)) (np nq)) (nq #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(mf mg) mh) mi) mj) mk) ml) mm) mn) mo) mp) mq) mr) ms) mt) mu) mv) mw) mx) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(lm ln) lo) lp) lq) lr) ls) lt) lu) lv) lw) lx) ly) lz) ma) mb) mc) md) me) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(kt ku) kv) kw) kx) ky) kz) la) lb) lc) ld) le) lf) lg) lh) li) lj) lk) ll) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(ka kb) kc) kd) ke) kf) kg) kh) ki) kj) kk) kl) km) kn) ko) kp) kq) kr) ks) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(jh ji) jj) jk) jl) jm) jn) jo) jp) jq) jr) js) jt) ju) jv) jw) jx) jy) jz) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(io ip) iq) ir) is) it) iu) iv) iw) ix) iy) iz) ja) jb) jc) jd) je) jf) jg) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(hv hw) hx) hy) hz) ia) ib) ic) id) ie) if) ig) ih) ii) ij) ik) il) im) in) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(hc hd) he) hf) hg) hh) hi) hj) hk) hl) hm) hn) ho) hp) hq) hr) hs) ht) hu) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(gj gk) gl) gm) gn) go) gp) gq) gr) gs) gt) gu) gv) gw) gx) gy) gz) ha) hb) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(fq fr) fs) ft) fu) fv) fw) fx) fy) fz) ga) gb) gc) gd) ge) gf) gg) gh) gi) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(ex ey) ez) fa) fb) fc) fd) fe) ff) fg) fh) fi) fj) fk) fl) fm) fn) fo) fp) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(ee ef) eg) eh) ei) ej) ek) el) em) en) eo) ep) eq) er) es) et) eu) ev) ew) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(dl dm) dn) do) dp) dq) dr) ds) dt) du) dv) dw) dx) dy) dz) ea) eb) ec) ed) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(cs ct) cu) cv) cw) cx) cy) cz) da) db) dc) dd) de) df) dg) dh) di) dj) dk) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(bz ca) cb) cc) cd) ce) cf) cg) ch) ci) cj) ck) cl) cm) cn) co) cp) cq) cr) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(bg bh) bi) bj) bk) bl) bm) bn) bo) bp) bq) br) bs) bt) bu) bv) bw) bx) by) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(an ao) ap) aq) ar) as) at) au) av) aw) ax) ay) az) ba) bb) bc) bd) be) bf) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(u v) w) x) y) z) aa) ab) ac) ad) ae) af) ag) ah) ai) aj) ak) al) am) #1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(#1(b c) d) e) f) g) h) i) j) k) l) m) n) o) p) q) r) s) t) nr))))))))))))))))))))) (a nr))
RWTS   :           1_948
- ANNI :             401
- COMM :             380
- ERAS :               0
- DREF :           1_167
- OPER :               0
