tests/snapshots/run@tests::programs::dec_bits.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/dec_bits.hvm
---
(* (* (a a)))
RWTS   :         180_043
- ANNI :          98_190
- COMM :              11
- ERAS :          32_738
- DREF :          49_104
- OPER :               0
