tests/snapshots/run@tests::programs::era_era.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/era_era.hvm
---
*
RWTS   :               3
- ANNI :               0
- COMM :               0
- ERAS :               1
- DREF :               2
- OPER :               0
