tests/snapshots/run@tests::programs::heavy_pre_reduction.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/heavy_pre_reduction.hvm
---
*
RWTS   :               2
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               2
- OPER :               0
