tests/snapshots/run@tests::programs::i24.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/i24.hvm
---
{+12 {+8 {+20 {+5 {+0 {0 {1 {0 {1 {+2 {+10 {+8 {+8388607 {-8388608 {+1 {+1 {-1 {-1 *}}}}}}}}}}}}}}}}}}
RWTS   :             114
- ANNI :              18
- COMM :               1
- ERAS :              19
- DREF :              58
- OPER :              18
