tests/snapshots/run@tests::programs::neg_fusion.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/neg_fusion.hvm
---
(a (* a))
RWTS   :             151
- ANNI :              85
- COMM :              36
- ERAS :               0
- DREF :              30
- OPER :               0
